kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/constraintchecker_tests/invalid/003_associations_06.kmt
/* $Id: 003_associations_06.kmt,v 1.2 2007-10-16 11:49:10 ftanguy Exp $ */

// Test of a invalid associations

package root_package;

require kermeta

/* not usable link : the atribute a in class C cannot be 
	used without raising a constraint exception on A.b*/
class A {
    reference b : B[1]#a
}
class B {
	attribute a : A#b
	
}

class C {
	attribute a : A // a warning should occur here
}
